--- a/manga-diary.html
+++ b/manga-diary.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>13Spookz37 - Hacker Manga Tagebuch</title>
+  <title>13Spookz37 - Hacker Diary Tagebuch</title>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -448,7 +448,7 @@
   </div>
 
   <header class="header">
-    <h1>Hacker Manga Tagebuch</h1>
+    <h1>Hacker Diary Tagebuch</h1>
     <p>Die visuelle Reise von 13Spookz37</p>
     <nav class="nav">
       <button class="nav-btn" onclick="scrollToChapter('chapter1')">
