--- a/hacker-diary.html
+++ b/hacker-diary.html
@@ -535,7 +535,7 @@
       <div class="panel-container">
         <div class="panel-date">Woche 3</div>
         <div class="panel-image">
-          <img src="images/Woche3.png" alt="Woche 3 - Web Hacking">
+          <img src="images/Woche3.jpg" alt="Woche 3 - Web Hacking">
           <div class="action-lines"></div>
           <div class="sound-effect" style="top: 50%; left: 50%; transform: translate(-50%, -50%);">INJECT!</div>
         </div>
@@ -564,7 +564,7 @@
       <div class="panel-container">
         <div class="panel-date">Woche 4</div>
         <div class="panel-image">
-          <img src="images/Woche4.png" alt="Woche 4 - Metasploit">
+          <img src="images/Woche4.jpg" alt="Woche 4 - Metasploit">
           <div class="action-lines"></div>
           <div class="sound-effect" style="top: 20px; left: 20px;">EXPLOIT!</div>
         </div>
@@ -598,7 +598,7 @@
       <div class="panel-container">
         <div class="panel-date">Woche 5</div>
         <div class="panel-image">
-          <img src="images/Woche5.png" alt="Woche 5 - Privilege Escalation">
+          <img src="images/Woche5.jpg" alt="Woche 5 - Privilege Escalation">
           <div class="action-lines"></div>
           <div class="sound-effect" style="bottom: 20px; right: 20px;">ROOT!</div>
         </div>
@@ -628,7 +628,7 @@
       <div class="panel-container">
         <div class="panel-date">Woche 6</div>
         <div class="panel-image">
-          <img src="images/Woche6.png" alt="Woche 6 - CTF Challenges">
+          <img src="images/Woche6.jpg" alt="Woche 6 - CTF Challenges">
           <div class="action-lines"></div>
           <div class="sound-effect" style="top: 30px; right: 30px;">CAPTURED!</div>
         </div>
