--- a/hacker-diary.html
+++ b/hacker-diary.html
@@ -481,21 +481,22 @@
           <div class="sound-effect" style="top: 20px; right: 20px;">START!</div>
         </div>
         <div class="panel-content">
-          <h3 class="panel-title">Hello World, Hacker Edition</h3>
+          <h3 class="panel-title">Hello World, meine Reise beginnt!</h3>
           <div class="speech-bubble">
             <p class="speech-text">
-              "Okay, Tag 1 meiner Ethical Hacking Journey! Linux installiert, 
-              Terminal offen, und keine Ahnung was 'sudo' bedeutet. 
-              Aber hey, jeder fängt mal klein an!"
+             „Okay, Tag 1 meiner Ethical-Hacking-Journey!
+              Ich habe ein tolles Buch zum Thema gefunden und versucht, daraus schlau zu werden – leider nur mit mäßigem Erfolg.
+                Darauf folgten Stunden über Stunden voller YouTube-Videos und anderer Online-Medien. Die Flut an Informationen war einfach überwältigend.
+              Aber irgendwo dazwischen habe ich einen Anfang gefunden.“
             </p>
             <p class="thought-text">
-              *Google ist mein bester Freund geworden*
+              *Google und ChatGPT ist mein bester Freund geworden*
             </p>
           </div>
           <div class="skill-tags">
-            <span class="skill-tag">Linux Basics</span>
-            <span class="skill-tag">Terminal Commands</span>
-            <span class="skill-tag">Kali Linux Setup</span>
+            <span class="skill-tag">Beharrlichkeit</span>
+            <span class="skill-tag">Ausdauer</span>
+            <span class="skill-tag">Wissbegierde</span>
           </div>
         </div>
       </div>
@@ -508,23 +509,24 @@
         <div class="panel-image">
           <img src="images/Woche2.png" alt="Woche 2 - Erste Tools">
           <div class="action-lines"></div>
-          <div class="sound-effect" style="bottom: 20px; left: 20px;">SCAN!</div>
+          <div class="sound-effect" style="bottom: 20px; left: 20px;">RETRY!</div>
         </div>
         <div class="panel-content">
-          <h3 class="panel-title">Nmap & Die Kunst des Scannens</h3>
+          <h3 class="panel-title">Aller Anfang ist schwer!</h3>
           <div class="speech-bubble">
             <p class="speech-text">
-              "Mein erstes Nmap-Scan! 'nmap -sV target' - und plötzlich 
-              sehe ich alle offenen Ports. Es ist wie Röntgenblick für Netzwerke!"
+              "Parallel zu meinem Einstieg vertiefte ich mich auf Coursera in das Google Cybersecurity Certificate – eine strukturierte Einführung in die Welt der IT-Sicherheit.
+                  Gleichzeitig wagte ich mich auf TryHackMe an den Cybersecurity 101 Path und klickte mich neugierig durch die ersten Labs.
+                    Was anfangs noch einschüchternd wirkte, begann plötzlich Spaß zu machen. Die Zusammenhänge wurden klarer, kleine Erfolge motivierten – und zum ersten Mal fühlte es sich so an, als würde ich wirklich vorankommen."
             </p>
             <p class="thought-text">
-              *Fühle mich wie Neo in der Matrix*
+              *Follow the white rabbit*
             </p>
           </div>
           <div class="skill-tags">
-            <span class="skill-tag">Nmap</span>
-            <span class="skill-tag">Port Scanning</span>
-            <span class="skill-tag">Network Recon</span>
+            <span class="skill-tag">Linux Basics</span>
+            <span class="skill-tag">Shell Scripting</span>
+            <span class="skill-tag">Windows Basics</span>
           </div>
         </div>
       </div>
@@ -535,25 +537,26 @@
       <div class="panel-container">
         <div class="panel-date">Woche 3</div>
         <div class="panel-image">
-          <img src="images/Woche3.jpg" alt="Woche 3 - Web Hacking">
+          <img src="images/Woche3.jpg" alt="Woche 3">
           <div class="action-lines"></div>
-          <div class="sound-effect" style="top: 50%; left: 50%; transform: translate(-50%, -50%);">INJECT!</div>
+          <div class="sound-effect" style="top: 50%; left: 50%; transform: translate(-50%, -50%);">INIT!</div>
         </div>
         <div class="panel-content">
-          <h3 class="panel-title">SQL Injection - Mein erster Exploit</h3>
+          <h3 class="panel-title">lernen, lernen und nochmal lernen...</h3>
           <div class="speech-bubble">
             <p class="speech-text">
-              "' OR '1'='1 -- und ich bin drin! DVWA ist mein Playground. 
-              Zum ersten Mal verstehe ich, warum Input Validation so wichtig ist!"
+              "Neben meinem Vollzeitjob lerne ich abends, so oft ich kann. Manchmal fehlt die Energie, aber ich versuche, mich immer wieder zu motivieren.
+                  Auf beiden Lernpfaden – Coursera und TryHackMe – komme ich Stück für Stück voran.
+                Es sind keine riesigen Sprünge, aber ich mache meine virtuellen Meter. Und genau das zählt."
             </p>
             <p class="thought-text">
-              *Mit großer Macht kommt große Verantwortung*
+              *Was man anfängt, bringt man auch zu Ende.*
             </p>
           </div>
           <div class="skill-tags">
-            <span class="skill-tag">SQL Injection</span>
-            <span class="skill-tag">DVWA</span>
-            <span class="skill-tag">Web Security</span>
+            <span class="skill-tag">Networking Concepts</span>
+            <span class="skill-tag">OSI Model</span>
+            <span class="skill-tag">TCP/IP Model</span>
           </div>
         </div>
       </div>
@@ -564,26 +567,28 @@
       <div class="panel-container">
         <div class="panel-date">Woche 4</div>
         <div class="panel-image">
-          <img src="images/Woche4.jpg" alt="Woche 4 - Metasploit">
+          <img src="images/Woche4.jpg" alt="Woche 4">
           <div class="action-lines"></div>
-          <div class="sound-effect" style="top: 20px; left: 20px;">EXPLOIT!</div>
+          <div class="sound-effect" style="top: 20px; left: 20px;">LAUNCH!</div>
         </div>
         <div class="panel-content">
-          <h3 class="panel-title">Metasploit Framework</h3>
+          <h3 class="panel-title">Here we go again!</h3>
           <div class="speech-bubble">
             <p class="speech-text">
-              "use exploit/windows/smb/ms17_010_eternalblue... 
-              set RHOST... exploit! Meine erste Reverse Shell! 
-              Das Gefühl ist unbeschreiblich!"
+              "Gefühlt wird die Nacht langsam zum Tag. Wieder sitze ich vor dem Bildschirm und haue in die Tasten.
+                Kein Tag vergeht, an dem ich nicht lerne – manchmal bewusst, manchmal nebenbei.
+                Selbst auf der Arbeit kreisen meine Gedanken um Cybersecurity. In Pausen lese ich Fachartikel, Bücher oder stöbere durch Reports.
+              Aber abends, wenn alles ruhig wird, ist es anders.
+                Da, am Laptop oder vorm PC, fühle ich mich angekommen – als wäre ich genau da, wo ich sein soll."
             </p>
             <p class="thought-text">
-              *Ethisch bleiben, immer ethisch bleiben!*
+              *Der längste Marathon beginnt mit dem ersten Schritt*
             </p>
           </div>
           <div class="skill-tags">
-            <span class="skill-tag">Metasploit</span>
-            <span class="skill-tag">Exploitation</span>
-            <span class="skill-tag">Reverse Shells</span>
+            <span class="skill-tag">Network Essentials</span>
+            <span class="skill-tag">CIA Triade</span>
+            <span class="skill-tag">Security Frameworks</span>
           </div>
         </div>
       </div>
@@ -598,26 +603,29 @@
       <div class="panel-container">
         <div class="panel-date">Woche 5</div>
         <div class="panel-image">
-          <img src="images/Woche5.jpg" alt="Woche 5 - Privilege Escalation">
+          <img src="images/Woche5.jpg" alt="Woche 5">
           <div class="action-lines"></div>
-          <div class="sound-effect" style="bottom: 20px; right: 20px;">ROOT!</div>
+          <div class="sound-effect" style="bottom: 20px; right: 20px;">WHOIS!</div>
         </div>
         <div class="panel-content">
-          <h3 class="panel-title">Privilege Escalation Mastery</h3>
+          <h3 class="panel-title">Meine Gedanken kreisen um Mehr!</h3>
           <div class="speech-bubble">
             <p class="speech-text">
-              "Von www-data zu root in 3 Schritten! LinPEAS ist mein neuer 
-              bester Freund. SUID Binaries? Check. Kernel Exploits? Check. 
-              I am root!"
+              "Ich habe die ersten Zertifikate vom Google Cybersecurity Programm geschafft und komme langsam, aber stetig bei TryHackMe voran.
+                Theorie und Praxis gehen Hand in Hand, doch mein Herz will mehr.
+                  Manchmal ertappe ich mich dabei, wie ich von Zertifizierungen träume, für die ich noch lange nicht bereit bin.
+                Diese Träume können mich vom eigentlichen Ziel ablenken, und dann muss ich mich wieder auf den Boden der Tatsachen holen.
+                  Soziale Medien überfluten meinen Kopf mit Videos über OSCP und andere Certs.
+                Also tue ich das Einzige, was wirklich hilft: Ich schließe YouTube und konzentriere mich wieder aufs Lernen. Ablenkung und Träumen bringen mich nicht weiter."
             </p>
             <p class="thought-text">
               *Der Weg nach oben ist gepflastert mit Enumeration*
             </p>
           </div>
           <div class="skill-tags">
-            <span class="skill-tag">Privilege Escalation</span>
-            <span class="skill-tag">LinPEAS</span>
-            <span class="skill-tag">Linux PrivEsc</span>
+            <span class="skill-tag">Networking Core Protocols</span>
+            <span class="skill-tag">Wireshark Basics</span>
+            <span class="skill-tag">Tcpdump Basics</span>
           </div>
         </div>
       </div>
@@ -628,25 +636,29 @@
       <div class="panel-container">
         <div class="panel-date">Woche 6</div>
         <div class="panel-image">
-          <img src="images/Woche6.jpg" alt="Woche 6 - CTF Challenges">
+          <img src="images/Woche6.jpg" alt="Woche 6">
           <div class="action-lines"></div>
-          <div class="sound-effect" style="top: 30px; right: 30px;">CAPTURED!</div>
+          <div class="sound-effect" style="top: 30px; right: 30px;">OOPS!</div>
         </div>
         <div class="panel-content">
-          <h3 class="panel-title">CTF - Capture The Flag!</h3>
+          <h3 class="panel-title">In der Ruhe liegt die Kraft</h3>
           <div class="speech-bubble">
             <p class="speech-text">
-              "Erste CTF Competition! 48 Stunden, wenig Schlaf, viel Kaffee. 
-              Am Ende: Platz 42 von 200! Für einen Anfänger nicht schlecht!"
+              "Wie ihr wisst, arbeite ich Vollzeit. Abends komme ich nach Hause, gehe erst noch zum Training (ja, auch das ziehe ich durch), und setze mich danach an den Laptop, um meiner Passion zu folgen.
+                Manchmal wage ich mich sogar an CTFs – kleine Herausforderungen, die mir alles abverlangen.
+                  Aber es gibt Tage, da läuft einfach nichts. Der Kopf ist voll, die Konzentration weg, und ich verstehe nur Bahnhof.
+                    Was dann hilft: ein Spaziergang. Egal bei welchem Wetter – Hauptsache raus, den Kopf frei bekommen.
+                  Und wenn es danach einfach besser ist, schlafen zu gehen, dann ist das eben so.
+                Man muss sich auch mal eingestehen können, dass man nicht jeden Tag glänzen kann."
             </p>
             <p class="thought-text">
-              *CTFs sind wie Drogen - einmal angefangen...*
+              *Disziplin ist wichtig – aber Pausen sind es auch.*
             </p>
           </div>
           <div class="skill-tags">
             <span class="skill-tag">CTF</span>
             <span class="skill-tag">Problem Solving</span>
-            <span class="skill-tag">Time Pressure</span>
+            <span class="skill-tag">Recovery Time</span>
           </div>
         </div>
       </div>
@@ -657,26 +669,30 @@
       <div class="panel-container">
         <div class="panel-date">Woche 7</div>
         <div class="panel-image">
-          <img src="images/Woche7.png" alt="Woche 7 - Python Scripting">
+          <img src="images/Woche7.png" alt="Woche 7">
           <div class="action-lines"></div>
-          <div class="sound-effect" style="bottom: 30px; left: 30px;">AUTOMATE!</div>
+          <div class="sound-effect" style="bottom: 30px; left: 30px;">TIRED!</div>
         </div>
         <div class="panel-content">
-          <h3 class="panel-title">Python - Der Hacker's Best Friend</h3>
+          <h3 class="panel-title">Work hard, hack harder!</h3>
           <div class="speech-bubble">
             <p class="speech-text">
-              "Erstes eigenes Tool geschrieben! Ein Port Scanner in Python. 
-              Okay, es ist langsamer als Nmap, aber es ist MEINS! 
-              import socket never felt so good!"
+              "Mit Nmap und Co. habe ich meine ersten Erfahrungen gesammelt – läuft ganz gut bisher.
+                Auch im Google-Zertifikatsprogramm komme ich weiter, bin mittlerweile bei Kurs 6 von 8 angekommen.
+                  Bei TryHackMe bin ich im Cybersecurity Path bei etwa 40 %. Macht echt Spaß, auch wenn’s manchmal fordernd ist.
+                    Leider hat mich eine Erkältung erwischt – dazu kommt noch ordentlich Stress.
+                      Aber egal: Keep going, ich nehme das Tempo einfach etwas raus.
+                    Es ist schon wieder spät geworden … um 2 Uhr morgens klingelt der Wecker. Arbeit ruft.
+                  Good Night!"
             </p>
             <p class="thought-text">
-              *Von Script-Kiddie zum Script-Schreiber*
+              *Selbst kleine Schritte sind Fortschritt*
             </p>
           </div>
           <div class="skill-tags">
-            <span class="skill-tag">Python</span>
-            <span class="skill-tag">Tool Development</span>
-            <span class="skill-tag">Automation</span>
+            <span class="skill-tag">Nmap Basics</span>
+            <span class="skill-tag">Metasploit Basics</span>
+            <span class="skill-tag">Cryptography Basics</span>
           </div>
         </div>
       </div>
@@ -687,25 +703,29 @@
       <div class="panel-container">
         <div class="panel-date">Woche 8</div>
         <div class="panel-image">
-          <img src="images/Woche8.png" alt="Woche 8 - Die Transformation">
+          <img src="images/Woche8.png" alt="Woche 8">
           <div class="action-lines"></div>
           <div class="sound-effect" style="top: 20px; left: 20px;">EVOLVED!</div>
         </div>
         <div class="panel-content">
-          <h3 class="panel-title">8 Wochen später...</h3>
+          <h3 class="panel-title">Kontinuität</h3>
           <div class="speech-bubble">
             <p class="speech-text">
-              "Von 'Was ist ein Terminal?' zu 'Ich schreibe meine eigenen Exploits'. 
-              Diese Journey ist verrückt! Nächstes Ziel: OSCP Zertifizierung!"
+              "Ich habe mir inzwischen eigene Testumgebungen eingerichtet – Metasploitable 2 und 3 laufen, und sogar das Mr. Robot-Lab steht bereit.
+                Meine Erfolge sind noch klein, aber sie kommen. Schritt für Schritt.
+                  Ich dokumentiere alles, was ich mache – irgendwann werde ich das veröffentlichen.
+                Aber erstmal bleibe ich dran und haue weiter in die Tasten.
+                  Sogar auf der Arbeit nutze ich AnkiDroid mit CheatSheets, um nebenbei zu lernen.
+                Das hilft mir, den Kopf fit zu halten und auch tagsüber in der Materie zu bleiben."
             </p>
             <p class="thought-text">
-              *Dies ist erst der Anfang...*
+              *Lernen endet nicht, nur weil die Schicht vorbei ist.*
             </p>
           </div>
           <div class="skill-tags">
-            <span class="skill-tag">Full Stack Pentesting</span>
-            <span class="skill-tag">Custom Exploits</span>
-            <span class="skill-tag">Security Mindset</span>
+            <span class="skill-tag">John the Ripper Basics</span>
+            <span class="skill-tag">Web Application Basics</span>
+            <span class="skill-tag">Burp Suite Basics</span>
           </div>
         </div>
       </div>
