--- a/hacker-diary.html
+++ b/hacker-diary.html
@@ -595,7 +595,7 @@
     </div>
 
     <div class="chapter-divider" id="chapter2">
-      <h2>Level Up: Fortgeschrittene Techniken</h2>
+      <h2>Level Up: Ein paar Certs und Fähigkeiten mehr</h2>
     </div>
 
     <!-- Woche 5 -->
