--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@ CERTIFICATIONS
       printLine('Letzte Anmeldung: ' + new Date().toLocaleString(), 'info');
       printLine('');
       printLine('Tippe "help" für verfügbare Befehle oder "cat README.txt" für mehr Info.', 'info');
-      printLine('NEU: Tippe "diary" um mein Hacker-Tagebuch zu öffnen!', 'warning');
+      printLine('NEU: Tippe "diary" um das Hacker-Tagebuch zu öffnen!', 'warning');
       printLine('');
     }
 
