--- a/hacker-diary.html
+++ b/hacker-diary.html
@@ -708,8 +708,7 @@
           <div class="panel-container">
             <div class="panel-date">Woche ${week} - ${weekDate.toLocaleDateString('de-DE')}</div>
             <div class="panel-image">
-              <img src="images/placeholder.png" alt="Woche ${week} - Coming Soon" 
-                   onerror="this.src='https://via.placeholder.com/500x400/1a1a1a/666?text=WOCHE+${week}%0AComing+Soon'">
+              <img src="images/Coming_Soon.png" alt="Woche ${week} - Coming Soon">
               <div class="lock-overlay">
                 <i class="fas fa-lock" style="font-size: 3rem; color: #666;"></i>
               </div>
