--- a/index.html
+++ b/index.html
@@ -636,6 +636,9 @@
 ║  Ich bin 13Spookz37, Pentester und Cyber-Enthusiast.     ║
 ║  Diese Seite ist mein digitales Hauptquartier.           ║
 ║                                                           ║
+║  🎯 HIGHLIGHT: Mein Ethical Hacking Journey!              ║
+║     → Tippe "diary" für mein visuelles Tagebuch          ║
+║                                                           ║
 ║  Verfügbare Befehle:                                      ║
 ║  - help        : Zeigt alle Befehle                      ║
 ║  - ls          : Listet Dateien auf                      ║
@@ -649,7 +652,7 @@
 ║  - diary       : Öffnet Hacker-Tagebuch                  ║
 ║  - hack        : ???                                      ║
 ║  - matrix      : Aktiviert Matrix-Effekt                  ║
-║  - theme <n>   : Wechselt Theme (matrix/cyberpunk/retro) ║
+║  - theme <name>: Wechselt Theme (matrix/cyberpunk/retro) ║
 ║                                                           ║
 ║  "The only way to learn is to live in the code."         ║
 ╚═══════════════════════════════════════════════════════════╝`
@@ -859,7 +862,7 @@ CERTIFICATIONS
           printLine('  diary       - Öffnet Hacker-Tagebuch');
           printLine('  hack        - ???');
           printLine('  matrix      - Aktiviert/Deaktiviert Matrix-Effekt');
-          printLine('  theme <n>   - Wechselt Theme (matrix/cyberpunk/retro)');
+          printLine('  theme <name> - Wechselt Theme (matrix/cyberpunk/retro)');
           printLine('');
           printLine('Terminal Themes:', 'info');
           printLine('  theme matrix    - Grüner Matrix-Style');
@@ -1187,6 +1190,8 @@ CERTIFICATIONS
       printLine('System initialisiert...', 'success');
       printLine('Willkommen zurück, 13Spookz37', 'highlight');
       printLine('Letzte Anmeldung: ' + new Date().toLocaleString(), 'info');
+      printLine('');
+      printLine('🚀 NEU: Mein Hacker-Tagebuch ist online! Tippe "diary" um es zu öffnen', 'warning');
       printLine('');
       printLine('Tippe "help" für verfügbare Befehle oder "cat README.txt" für mehr Info.', 'info');
       printLine('');
