--- a/hacker-diary.html
+++ b/hacker-diary.html
@@ -554,9 +554,9 @@
             </p>
           </div>
           <div class="skill-tags">
-            <span class="skill-tag">Nmap Basics</span>
-            <span class="skill-tag">Metasploit Basics</span>
-            <span class="skill-tag">Cryptography Basics</span>
+            <span class="skill-tag">Ausdauer</span>
+            <span class="skill-tag">Beharrlichkeit</span>
+            <span class="skill-tag">Engagement</span>
           </div>
         </div>
       </div>
@@ -671,7 +671,7 @@
           <h3 class="panel-title">Meine Gedanken kreisen um Mehr!</h3>
           <div class="speech-bubble">
             <p class="speech-text">
-              "Ich habe die ersten Zertifikate vom Google Cybersecurity Programm geschafft und komme langsam, aber stetig bei TryHackMe voran.
+              "Ich habe die ersten Zertifikate vom Google Cybersecurity Programm errungen und komme langsam, aber stetig bei TryHackMe voran.
                 Theorie und Praxis gehen Hand in Hand, doch mein Herz will mehr.
                   Manchmal ertappe ich mich dabei, wie ich von Zertifizierungen träume, für die ich noch lange nicht bereit bin.
                 Diese Träume können mich vom eigentlichen Ziel ablenken, und dann muss ich mich wieder auf den Boden der Tatsachen holen.
@@ -750,9 +750,9 @@
             </p>
           </div>
           <div class="skill-tags">
-            <span class="skill-tag">Nmap</span>
-            <span class="skill-tag">Google Cybersecurity</span>
-            <span class="skill-tag">TryHackMe</span>
+            <span class="skill-tag">Nmap Basics</span>
+            <span class="skill-tag">Cryptography Basics</span>
+            <span class="skill-tag">Hashing Basics</span>
           </div>
         </div>
       </div>
