--- a/hacker-diary.html
+++ b/hacker-diary.html
@@ -759,7 +759,7 @@
     </div>
 
     <!-- Woche 8 -->
-    <div class="manga-panel" id="latest">
+    <div class="manga-panel">
       <div class="panel-container">
         <div class="panel-date">Woche 8</div>
         <div class="panel-image">
@@ -791,9 +791,128 @@
       </div>
     </div>
 
+    <!-- Woche 9 -->
+<div class="manga-panel" id="latest">
+  <div class="panel-container">
+    <div class="panel-date">Woche 9</div>
+    <div class="panel-image">
+      <img src="images/Woche9.png" alt="Woche 9">
+      <div class="action-lines"></div>
+      <div class="sound-effect" style="top: 20px; right: 20px;">CODE!</div>
+    </div>
+    <div class="panel-content">
+      <h3 class="panel-title">Harte Arbeit macht sich bezahlt</h3>
+      <div class="speech-bubble">
+        <p class="speech-text">
+          "Das Lernen beginnt sich endlich auszuzahlen. Die Inhalte der Coursera-Kurse fliegen mir fast im Schlaf zu, und auch in meinen eigenen Labs sowie auf TryHackMe spüre ich echte Fortschritte. 
+              Die ersten Konzepte, die anfangs noch wie ein unlösbares Rätsel wirkten, fügen sich langsam zu einem klareren Bild zusammen.  
+            Der Weg ist noch lang, keine Frage — aber zum ersten Mal fühlt er sich nicht mehr wie ein Sprung ins Ungewisse an, sondern wie eine Entscheidung mit Richtung"
+        </p>
+        <p class="thought-text">
+          *Es geht voran. Nicht perfekt, aber stetig. Und das reicht erstmal.*
+        </p>
+      </div>
+      <div class="skill-tags">
+        <span class="skill-tag">Python Basics</span>
+        <span class="skill-tag">Metasploit Meterpreter</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <!-- Woche 10 -->
+<div class="manga-panel">
+  <div class="panel-container">
+    <div class="panel-date">Woche 10</div>
+    <div class="panel-image">
+      <img src="images/Woche10.png" alt="Woche 10">
+      <div class="action-lines"></div>
+      <div class="sound-effect" style="top: 20px; right: 20px;">MOTIVATED!</div>
+    </div>
+    <div class="panel-content">
+      <h3 class="panel-title">Injection Point</h3>
+      <div class="speech-bubble">
+        <p class="speech-text">
+          "Ein neues Kapitel im <strong>Cybersecurity 101 Path</strong> auf TryHackMe öffnet sich. Diesmal tauche ich in die Welt des <strong>Web-Hackings</strong> ein. 
+            Vieles davon ist noch Neuland für mich – abgesehen von ein paar ersten Experimenten in meinen eigenen Labs.  
+            <strong>JavaScript</strong> fühlt sich an wie ein fremder Dialekt – ungewohnt und manchmal widerspenstig, vor allem, wenn man ihn zum ersten Mal ernsthaft anfasst.  
+          <strong>SQL</strong> hatte ich bereits im Google Cybersecurity-Kurs gestreift, aber hier geht es deutlich tiefer – und vor allem: anschaulicher.  
+            Trotz der Komplexität beginne ich langsam, Zusammenhänge zu erkennen.  
+            <em>Eine fordernde, aber faszinierende Woche."</em>"
+        </p>
+        <p class="thought-text">
+          *Ich stolpere oft, aber genau dabei lerne ich am meisten.*
+        </p>
+      </div>
+      <div class="skill-tags">
+         <span class="skill-tag">SQL Basics</span>
+        <span class="skill-tag">JavaScript Basics</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <!-- Woche 11 -->
+<div class="manga-panel">
+  <div class="panel-container">
+    <div class="panel-date">Woche 11</div>
+    <div class="panel-image">
+      <img src="images/Woche11.png" alt="Woche 11">
+      <div class="action-lines"></div>
+      <div class="sound-effect" style="top: 20px; right: 20px;">STILL ALIVE!</div>
+    </div>
+    <div class="panel-content">
+      <h3 class="panel-title">Calm down</h3>
+      <div class="speech-bubble">
+        <p class="speech-text">
+          "Endlich Urlaub – und ganze vier Wochen! Zeit, um richtig durchzuatmen, Kraft zu tanken und trotzdem weiterzukommen. Ich gönne mir Spaziergänge im Wald, lasse den Kopf frei werden.  
+            Aber ganz abschalten? Schwer! Selbst unterwegs begleiten mich Bücher und Cheat Sheets. Ganz ohne geht irgendwie nicht mehr.  
+              Trotzdem nehme ich mir bewusst die Pausen, die ich wirklich brauche."
+        </p>
+        <p class="thought-text">
+          *Selbst in der Stille des Waldes kreisen meine Gedanken um Exploits und Payloads...*
+        </p>
+      </div>
+      <div class="skill-tags">
+        <span class="skill-tag">Regeneration</span>
+        <span class="skill-tag">Cheat Sheet-Mastering</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Woche 12 -->
+<div class="manga-panel">
+  <div class="panel-container">
+    <div class="panel-date">Woche 12</div>
+    <div class="panel-image">
+      <img src="images/Woche12.png" alt="Woche 12">
+      <div class="action-lines"></div>
+      <div class="sound-effect" style="top: 20px; right: 20px;">NO RETREAT!</div>
+    </div>
+    <div class="panel-content">
+      <h3 class="panel-title">Offensive Tools & mentale Defensiven</h3>
+      <div class="speech-bubble">
+        <p class="speech-text">
+          "Das Web-Hacking-Modul im Cybersecurity 101 Path auf TryHackMe ist geschafft – jetzt geht’s weiter mit Offensive Security Tooling. Klingt stark, fühlt sich aber schwer an. Trotz Urlaub hängt mir der private Stress in den Knochen.
+            Meine Energiereserven sind ziemlich aufgebraucht, und das Lernen läuft gerade eher zäh. Walkthroughs nutze ich nur, wenn gar nichts mehr geht – trotzdem finde ich meinen Weg.
+              Durch den vollgepackten Alltag bleibt oft nur der Abend oder die Nacht zum Lernen. In meinen Homelabs geht’s gerade auch nicht wirklich voran. Aber hey – noch ist kein Meister vom Himmel gefallen... "
+        </p>
+        <p class="thought-text">
+          *No retreat, no surrender!*
+        </p>
+      </div>
+      <div class="skill-tags">
+        <span class="skill-tag">Hydra Basics</span>
+        <span class="skill-tag">Gobuster Basics</span>
+      </div>
+    </div>
+  </div>
+</div>
+    
     <div class="chapter-divider">
       <h2>Die Journey geht weiter...</h2>
-    </div>
+    </div> 
     
     <!-- Zukünftige Wochen Container -->
     <div class="future-weeks" id="future-weeks">
