--- a/hacker-diary.html
+++ b/hacker-diary.html
@@ -814,7 +814,7 @@
       </div>
       <div class="skill-tags">
         <span class="skill-tag">Python Basics</span>
-        <span class="skill-tag">Metasploit Meterpreter</span>
+        <span class="skill-tag">Metasploit Basics</span>
       </div>
     </div>
   </div>
